--- a/package.json
+++ b/package.json
@@ -4,13 +4,20 @@
   "description": "A Node.js Discord Bot to server several commands for your discord",
   "main": "index.js",
   "dependencies": {
+    "@discordjs/opus": "^0.3.2",
+    "@types/node": "^14.0.27",
     "discord.js": "^12.2.0",
-    "dotenv": "^8.2.0"
+    "dotenv": "^8.2.0",
+    "ffmpeg-static": "^4.2.6",
+    "ytdl": "^1.3.5",
+    "ytdl-core": "^3.2.0"
   },
   "devDependencies": {},
   "scripts": {
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/index.js"
+    "start": "node dist/index.js",
+    "debug": "tsc && node dist/index.js"
   },
   "repository": {
     "type": "git",
